--- a/index.html
+++ b/index.html
@@ -119,7 +119,66 @@
         flex-direction: column-reverse;
         direction: rtl;
       </pre>
+
+      <div class="parent cjk-characters">
+        <div class="child child-1">1</div>
+        <div class="child child-2">2</div>
+        <div class="child child-3">3</div>
+        <div class="child child-4">4</div>
+        <div class="child child-5">5</div>
+      </div>
+      <pre class="code-snippet">
+        #9
+        display: flex;
+        flex-direction: row;
+        writing-mode: vertical-rl;
+        text-orientation: upright;
+      </pre>
+
+      <div class="parent flex-direction-row-reverse cjk-characters">
+        <div class="child child-1">1</div>
+        <div class="child child-2">2</div>
+        <div class="child child-3">3</div>
+        <div class="child child-4">4</div>
+        <div class="child child-5">5</div>
+      </div>
+      <pre class="code-snippet">
+        #10
+        display: flex;
+        flex-direction: row-reverse;
+        writing-mode: vertical-rl;
+        text-orientation: upright;
+      </pre>
+
+      <div class="parent flex-direction-column cjk-characters">
+        <div class="child child-1">1</div>
+        <div class="child child-2">2</div>
+        <div class="child child-3">3</div>
+        <div class="child child-4">4</div>
+        <div class="child child-5">5</div>
+      </div>
+      <pre class="code-snippet">
+        #11
+        display: flex;
+        flex-direction: column;
+        writing-mode: vertical-rl;
+        text-orientation: upright;
+      </pre>
+
+      <div class="parent flex-direction-column-reverse cjk-characters">
+        <div class="child child-1">1</div>
+        <div class="child child-2">2</div>
+        <div class="child child-3">3</div>
+        <div class="child child-4">4</div>
+        <div class="child child-5">5</div>
+      </div>
+      <pre class="code-snippet">
+        #12
+        display: flex;
+        flex-direction: column-reverse;
+        writing-mode: vertical-rl;
+        text-orientation: upright;
+      </pre>
     </section>
   </body>
 </html>
-© 2022 GitHub, Inc.
