--- a/index.html
+++ b/index.html
@@ -9,175 +9,271 @@
   <body>
     <section class="container">
       <div class="parent">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #1
-        display: flex;
-        flex-direction: row;
-        direction: ltr;
+        <b><u>#01</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>row;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>direction:</b> <i>ltr;</i>
       </pre>
 
       <div class="parent flex-direction-row-reverse">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #2
-        display: flex;
-        flex-direction: row-reverse;
-        direction: ltr;
+        <b><u>#02</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>row-reverse;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>direction:</b> <i>ltr;</i>
       </pre>
 
       <div class="parent flex-direction-column">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #3
-        display: flex;
-        flex-direction: column;
-        direction: ltr;
+        <b><u>#03</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>column;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>direction:</b> <i>ltr;</i>
       </pre>
 
       <div class="parent flex-direction-column-reverse">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #4
-        display: flex;
-        flex-direction: column-reverse;
-        direction: ltr;
+        <b><u>#04</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>column-reverse;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>direction:</b> <i>ltr;</i>
       </pre>
 
       <div class="parent direction-rtl">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #5
-        display: flex;
-        flex-direction: row;
-        direction: rtl;
+        <b><u>#05</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>row;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>direction:</b> <i>rtl;</i>
       </pre>
 
       <div class="parent flex-direction-row-reverse direction-rtl">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #6
-        display: flex;
-        flex-direction: row-reverse;
-        direction: rtl;
+        <b><u>#06</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>row-reverse;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>direction:</b> <i>rtl;</i>
       </pre>
 
       <div class="parent flex-direction-column direction-rtl">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #7
-        display: flex;
-        flex-direction: column;
-        direction: rtl;
+        <b><u>#07</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>column;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>direction:</b> <i>rtl;</i>
       </pre>
 
       <div class="parent flex-direction-column-reverse direction-rtl">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #8
-        display: flex;
-        flex-direction: column-reverse;
-        direction: rtl;
+        <b><u>#08</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>column-reverse;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>direction:</b> <i>rtl;</i>
       </pre>
 
       <div class="parent cjk-characters">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #9
-        display: flex;
-        flex-direction: row;
-        writing-mode: vertical-rl;
-        text-orientation: upright;
+        <b><u>#09</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>row;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>writing-mode:</b> <i>vertical-rl;</i>
+        <b>text-orientation:</b> <i>upright;</i>
       </pre>
 
       <div class="parent flex-direction-row-reverse cjk-characters">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #10
-        display: flex;
-        flex-direction: row-reverse;
-        writing-mode: vertical-rl;
-        text-orientation: upright;
+        <b><u>#10</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>row-reverse;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>writing-mode:</b> <i>vertical-rl;</i>
+        <b>text-orientation:</b> <i>upright;</i>
       </pre>
 
       <div class="parent flex-direction-column cjk-characters">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #11
-        display: flex;
-        flex-direction: column;
-        writing-mode: vertical-rl;
-        text-orientation: upright;
+        <b><u>#11</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>column;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>writing-mode:</b> <i>vertical-rl;</i>
+        <b>text-orientation:</b> <i>upright;</i>
       </pre>
 
       <div class="parent flex-direction-column-reverse cjk-characters">
-        <div class="child child-1">1</div>
-        <div class="child child-2">2</div>
-        <div class="child child-3">3</div>
-        <div class="child child-4">4</div>
-        <div class="child child-5">5</div>
+        <div class="child child-square child-1">1</div>
+        <div class="child child-square child-2">2</div>
+        <div class="child child-square child-3">3</div>
+        <div class="child child-square child-4">4</div>
+        <div class="child child-square child-5">5</div>
       </div>
       <pre class="code-snippet">
-        #12
-        display: flex;
-        flex-direction: column-reverse;
-        writing-mode: vertical-rl;
-        text-orientation: upright;
+        <b><u>#12</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-direction:</b> <i>column-reverse;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+        <b>writing-mode:</b> <i>vertical-rl;</i>
+        <b>text-orientation:</b> <i>upright;</i>
+      </pre>
+
+      <div class="parent">
+        <div class="child child-rectangle child-A">A</div>
+        <div class="child child-rectangle child-B">BB</div>
+        <div class="child child-rectangle child-C">CCC</div>
+        <div class="child child-rectangle child-D">DDDD</div>
+        <div class="child child-rectangle child-E">EEEEE</div>
+        <div class="child child-rectangle child-F">FFFFFF</div>
+        <div class="child child-rectangle child-G">GGGGGGG</div>
+        <div class="child child-rectangle child-H">HHHHHHHH</div>
+        <div class="child child-rectangle child-I">IIIIIIIII</div>
+        <div class="child child-rectangle child-J">JJJJJJJJJJ</div>
+        <div class="child child-rectangle child-K">KKKKKKKKKKK</div>
+        <div class="child child-rectangle child-L">LLLLLLLLLLLL</div>
+        <div class="child child-rectangle child-M">MMMMMMMMMMMMM</div>
+        <div class="child child-rectangle child-N">NNNNNNNNNNNNNN</div>
+        <div class="child child-rectangle child-O">OOOOOOOOOOOOOOO</div>
+        <div class="child child-rectangle child-P">PPPPPPPPPPPPPPPPP</div>
+        <div class="child child-rectangle child-R">RRRRRRRRRRRRRRRRR</div>
+        <div class="child child-rectangle child-S">SSSSSSSSSSSSSSSSSS</div>
+        <div class="child child-rectangle child-T">TTTTTTTTTTTTTTTTTTT</div>
+        <div class="child child-rectangle child-U">UUUUUUUUUUUUUUUUUUUU</div>
+      </div>
+      <pre class="code-snippet">
+        <b><u>#13</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+      </pre>
+
+      <div class="parent flex-wrap">
+        <div class="child child-rectangle child-A">A</div>
+        <div class="child child-rectangle child-B">BB</div>
+        <div class="child child-rectangle child-C">CCC</div>
+        <div class="child child-rectangle child-D">DDDD</div>
+        <div class="child child-rectangle child-E">EEEEE</div>
+        <div class="child child-rectangle child-F">FFFFFF</div>
+        <div class="child child-rectangle child-G">GGGGGGG</div>
+        <div class="child child-rectangle child-H">HHHHHHHH</div>
+        <div class="child child-rectangle child-I">IIIIIIIII</div>
+        <div class="child child-rectangle child-J">JJJJJJJJJJ</div>
+        <div class="child child-rectangle child-K">KKKKKKKKKKK</div>
+        <div class="child child-rectangle child-L">LLLLLLLLLLLL</div>
+        <div class="child child-rectangle child-M">MMMMMMMMMMMMM</div>
+        <div class="child child-rectangle child-N">NNNNNNNNNNNNNN</div>
+        <div class="child child-rectangle child-O">OOOOOOOOOOOOOOO</div>
+        <div class="child child-rectangle child-P">PPPPPPPPPPPPPPPPP</div>
+        <div class="child child-rectangle child-R">RRRRRRRRRRRRRRRRR</div>
+        <div class="child child-rectangle child-S">SSSSSSSSSSSSSSSSSS</div>
+        <div class="child child-rectangle child-T">TTTTTTTTTTTTTTTTTTT</div>
+        <div class="child child-rectangle child-U">UUUUUUUUUUUUUUUUUUUU</div>
+      </div>
+      <pre class="code-snippet">
+        <b><u>#14</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-wrap:</b> <i>wrap;</i>
+      </pre>
+
+      <div class="parent flex-wrap-reverse">
+        <div class="child child-rectangle child-A">A</div>
+        <div class="child child-rectangle child-B">BB</div>
+        <div class="child child-rectangle child-C">CCC</div>
+        <div class="child child-rectangle child-D">DDDD</div>
+        <div class="child child-rectangle child-E">EEEEE</div>
+        <div class="child child-rectangle child-F">FFFFFF</div>
+        <div class="child child-rectangle child-G">GGGGGGG</div>
+        <div class="child child-rectangle child-H">HHHHHHHH</div>
+        <div class="child child-rectangle child-I">IIIIIIIII</div>
+        <div class="child child-rectangle child-J">JJJJJJJJJJ</div>
+        <div class="child child-rectangle child-K">KKKKKKKKKKK</div>
+        <div class="child child-rectangle child-L">LLLLLLLLLLLL</div>
+        <div class="child child-rectangle child-M">MMMMMMMMMMMMM</div>
+        <div class="child child-rectangle child-N">NNNNNNNNNNNNNN</div>
+        <div class="child child-rectangle child-O">OOOOOOOOOOOOOOO</div>
+        <div class="child child-rectangle child-P">PPPPPPPPPPPPPPPPP</div>
+        <div class="child child-rectangle child-R">RRRRRRRRRRRRRRRRR</div>
+        <div class="child child-rectangle child-S">SSSSSSSSSSSSSSSSSS</div>
+        <div class="child child-rectangle child-T">TTTTTTTTTTTTTTTTTTT</div>
+        <div class="child child-rectangle child-U">UUUUUUUUUUUUUUUUUUUU</div>
+      </div>
+      <pre class="code-snippet">
+        <b><u>#15</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>flex-wrap:</b> <i>wrap-reverse;</i>
       </pre>
     </section>
   </body>
