--- a/index.html
+++ b/index.html
@@ -275,6 +275,188 @@
         <b>display:</b> <i>flex;</i>
         <b>flex-wrap:</b> <i>wrap-reverse;</i>
       </pre>
+
+      <div class="parent height flex-direction-column">
+        <div class="child child-rectangle child-A">A</div>
+        <div class="child child-rectangle child-B">BB</div>
+        <div class="child child-rectangle child-C">CCC</div>
+        <div class="child child-rectangle child-D">DDDD</div>
+        <div class="child child-rectangle child-E">EEEEE</div>
+        <div class="child child-rectangle child-F">FFFFFF</div>
+        <div class="child child-rectangle child-G">GGGGGGG</div>
+        <div class="child child-rectangle child-H">HHHHHHHH</div>
+        <div class="child child-rectangle child-I">IIIIIIIII</div>
+        <div class="child child-rectangle child-J">JJJJJJJJJJ</div>
+        <div class="child child-rectangle child-K">KKKKKKKKKKK</div>
+        <div class="child child-rectangle child-L">LLLLLLLLLLLL</div>
+        <div class="child child-rectangle child-M">MMMMMMMMMMMMM</div>
+        <div class="child child-rectangle child-N">NNNNNNNNNNNNNN</div>
+        <div class="child child-rectangle child-O">OOOOOOOOOOOOOOO</div>
+        <div class="child child-rectangle child-P">PPPPPPPPPPPPPPPPP</div>
+        <div class="child child-rectangle child-R">RRRRRRRRRRRRRRRRR</div>
+        <div class="child child-rectangle child-S">SSSSSSSSSSSSSSSSSS</div>
+        <div class="child child-rectangle child-T">TTTTTTTTTTTTTTTTTTT</div>
+        <div class="child child-rectangle child-U">UUUUUUUUUUUUUUUUUUUU</div>
+      </div>
+      <pre class="code-snippet">
+        <b><u>#16</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>height:</b> <i>500px;</i>
+        <b>flex-direction:</b> <i>column;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+      </pre>
+
+      <div class="parent height flex-direction-column flex-wrap">
+        <div class="child child-rectangle child-A">A</div>
+        <div class="child child-rectangle child-B">BB</div>
+        <div class="child child-rectangle child-C">CCC</div>
+        <div class="child child-rectangle child-D">DDDD</div>
+        <div class="child child-rectangle child-E">EEEEE</div>
+        <div class="child child-rectangle child-F">FFFFFF</div>
+        <div class="child child-rectangle child-G">GGGGGGG</div>
+        <div class="child child-rectangle child-H">HHHHHHHH</div>
+        <div class="child child-rectangle child-I">IIIIIIIII</div>
+        <div class="child child-rectangle child-J">JJJJJJJJJJ</div>
+        <div class="child child-rectangle child-K">KKKKKKKKKKK</div>
+        <div class="child child-rectangle child-L">LLLLLLLLLLLL</div>
+        <div class="child child-rectangle child-M">MMMMMMMMMMMMM</div>
+        <div class="child child-rectangle child-N">NNNNNNNNNNNNNN</div>
+        <div class="child child-rectangle child-O">OOOOOOOOOOOOOOO</div>
+        <div class="child child-rectangle child-P">PPPPPPPPPPPPPPPPP</div>
+        <div class="child child-rectangle child-R">RRRRRRRRRRRRRRRRR</div>
+        <div class="child child-rectangle child-S">SSSSSSSSSSSSSSSSSS</div>
+        <div class="child child-rectangle child-T">TTTTTTTTTTTTTTTTTTT</div>
+        <div class="child child-rectangle child-U">UUUUUUUUUUUUUUUUUUUU</div>
+      </div>
+      <pre class="code-snippet">
+        <b><u>#17</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>height:</b> <i>500px;</i>
+        <b>flex-direction:</b> <i>column;</i>
+        <b>flex-wrap:</b> <i>wrap;</i>
+      </pre>
+
+      <div class="parent height flex-direction-column flex-wrap-reverse">
+        <div class="child child-rectangle child-A">A</div>
+        <div class="child child-rectangle child-B">BB</div>
+        <div class="child child-rectangle child-C">CCC</div>
+        <div class="child child-rectangle child-D">DDDD</div>
+        <div class="child child-rectangle child-E">EEEEE</div>
+        <div class="child child-rectangle child-F">FFFFFF</div>
+        <div class="child child-rectangle child-G">GGGGGGG</div>
+        <div class="child child-rectangle child-H">HHHHHHHH</div>
+        <div class="child child-rectangle child-I">IIIIIIIII</div>
+        <div class="child child-rectangle child-J">JJJJJJJJJJ</div>
+        <div class="child child-rectangle child-K">KKKKKKKKKKK</div>
+        <div class="child child-rectangle child-L">LLLLLLLLLLLL</div>
+        <div class="child child-rectangle child-M">MMMMMMMMMMMMM</div>
+        <div class="child child-rectangle child-N">NNNNNNNNNNNNNN</div>
+        <div class="child child-rectangle child-O">OOOOOOOOOOOOOOO</div>
+        <div class="child child-rectangle child-P">PPPPPPPPPPPPPPPPP</div>
+        <div class="child child-rectangle child-R">RRRRRRRRRRRRRRRRR</div>
+        <div class="child child-rectangle child-S">SSSSSSSSSSSSSSSSSS</div>
+        <div class="child child-rectangle child-T">TTTTTTTTTTTTTTTTTTT</div>
+        <div class="child child-rectangle child-U">UUUUUUUUUUUUUUUUUUUU</div>
+      </div>
+      <pre class="code-snippet">
+        <b><u>#18</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>height:</b> <i>500px;</i>
+        <b>flex-direction:</b> <i>column;</i>
+        <b>flex-wrap:</b> <i>wrap-reverse;</i>
+      </pre>
+
+      <div class="parent height flex-direction-column-reverse">
+        <div class="child child-rectangle child-A">A</div>
+        <div class="child child-rectangle child-B">BB</div>
+        <div class="child child-rectangle child-C">CCC</div>
+        <div class="child child-rectangle child-D">DDDD</div>
+        <div class="child child-rectangle child-E">EEEEE</div>
+        <div class="child child-rectangle child-F">FFFFFF</div>
+        <div class="child child-rectangle child-G">GGGGGGG</div>
+        <div class="child child-rectangle child-H">HHHHHHHH</div>
+        <div class="child child-rectangle child-I">IIIIIIIII</div>
+        <div class="child child-rectangle child-J">JJJJJJJJJJ</div>
+        <div class="child child-rectangle child-K">KKKKKKKKKKK</div>
+        <div class="child child-rectangle child-L">LLLLLLLLLLLL</div>
+        <div class="child child-rectangle child-M">MMMMMMMMMMMMM</div>
+        <div class="child child-rectangle child-N">NNNNNNNNNNNNNN</div>
+        <div class="child child-rectangle child-O">OOOOOOOOOOOOOOO</div>
+        <div class="child child-rectangle child-P">PPPPPPPPPPPPPPPPP</div>
+        <div class="child child-rectangle child-R">RRRRRRRRRRRRRRRRR</div>
+        <div class="child child-rectangle child-S">SSSSSSSSSSSSSSSSSS</div>
+        <div class="child child-rectangle child-T">TTTTTTTTTTTTTTTTTTT</div>
+        <div class="child child-rectangle child-U">UUUUUUUUUUUUUUUUUUUU</div>
+      </div>
+      <pre class="code-snippet">
+        <b><u>#19</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>height:</b> <i>500px;</i>
+        <b>flex-direction:</b> <i>column-reverse;</i>
+        <b>flex-wrap:</b> <i>no-wrap;</i>
+      </pre>
+
+      <div class="parent height flex-direction-column-reverse flex-wrap">
+        <div class="child child-rectangle child-A">A</div>
+        <div class="child child-rectangle child-B">BB</div>
+        <div class="child child-rectangle child-C">CCC</div>
+        <div class="child child-rectangle child-D">DDDD</div>
+        <div class="child child-rectangle child-E">EEEEE</div>
+        <div class="child child-rectangle child-F">FFFFFF</div>
+        <div class="child child-rectangle child-G">GGGGGGG</div>
+        <div class="child child-rectangle child-H">HHHHHHHH</div>
+        <div class="child child-rectangle child-I">IIIIIIIII</div>
+        <div class="child child-rectangle child-J">JJJJJJJJJJ</div>
+        <div class="child child-rectangle child-K">KKKKKKKKKKK</div>
+        <div class="child child-rectangle child-L">LLLLLLLLLLLL</div>
+        <div class="child child-rectangle child-M">MMMMMMMMMMMMM</div>
+        <div class="child child-rectangle child-N">NNNNNNNNNNNNNN</div>
+        <div class="child child-rectangle child-O">OOOOOOOOOOOOOOO</div>
+        <div class="child child-rectangle child-P">PPPPPPPPPPPPPPPPP</div>
+        <div class="child child-rectangle child-R">RRRRRRRRRRRRRRRRR</div>
+        <div class="child child-rectangle child-S">SSSSSSSSSSSSSSSSSS</div>
+        <div class="child child-rectangle child-T">TTTTTTTTTTTTTTTTTTT</div>
+        <div class="child child-rectangle child-U">UUUUUUUUUUUUUUUUUUUU</div>
+      </div>
+      <pre class="code-snippet">
+        <b><u>#20</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>height:</b> <i>500px;</i>
+        <b>flex-direction:</b> <i>column-reverse;</i>
+        <b>flex-wrap:</b> <i>wrap;</i>
+      </pre>
+
+      <div
+        class="parent height flex-direction-column-reverse flex-wrap-reverse"
+      >
+        <div class="child child-rectangle child-A">A</div>
+        <div class="child child-rectangle child-B">BB</div>
+        <div class="child child-rectangle child-C">CCC</div>
+        <div class="child child-rectangle child-D">DDDD</div>
+        <div class="child child-rectangle child-E">EEEEE</div>
+        <div class="child child-rectangle child-F">FFFFFF</div>
+        <div class="child child-rectangle child-G">GGGGGGG</div>
+        <div class="child child-rectangle child-H">HHHHHHHH</div>
+        <div class="child child-rectangle child-I">IIIIIIIII</div>
+        <div class="child child-rectangle child-J">JJJJJJJJJJ</div>
+        <div class="child child-rectangle child-K">KKKKKKKKKKK</div>
+        <div class="child child-rectangle child-L">LLLLLLLLLLLL</div>
+        <div class="child child-rectangle child-M">MMMMMMMMMMMMM</div>
+        <div class="child child-rectangle child-N">NNNNNNNNNNNNNN</div>
+        <div class="child child-rectangle child-O">OOOOOOOOOOOOOOO</div>
+        <div class="child child-rectangle child-P">PPPPPPPPPPPPPPPPP</div>
+        <div class="child child-rectangle child-R">RRRRRRRRRRRRRRRRR</div>
+        <div class="child child-rectangle child-S">SSSSSSSSSSSSSSSSSS</div>
+        <div class="child child-rectangle child-T">TTTTTTTTTTTTTTTTTTT</div>
+        <div class="child child-rectangle child-U">UUUUUUUUUUUUUUUUUUUU</div>
+      </div>
+      <pre class="code-snippet">
+        <b><u>#21</u></b>
+        <b>display:</b> <i>flex;</i>
+        <b>height:</b> <i>500px;</i>
+        <b>flex-direction:</b> <i>column-reverse;</i>
+        <b>flex-wrap:</b> <i>wrap-reverse;</i>
+      </pre>
     </section>
   </body>
 </html>
