Add align-items examples

--- a/index.html
+++ b/index.html
@@ -814,6 +814,118 @@
           </code>
         </pre>
       </section>
+
+      <section class="example">
+        <div class="parent height">
+          <div class="child child-1">One</div>
+          <div class="child child-2">Two<br>Two</div>
+          <div class="child child-3">Three<br>Three<br>Three</div>
+          <div class="child child-4">Four<br>Four<br>Four<br>Four</div>
+          <div class="child child-5">Five<br>Five<br>Five<br>Five<br>Five</div>
+        </div>
+
+        <pre class="codeblock">
+          <code>
+            <b class="code-title">#34</b>
+            <b class="code-property">display:</b> <b>flex;</b>
+            <b class="code-property">flex-direction:</b> <b>row;</b>
+            <b class="code-property">flex-wrap:</b> <b>no-wrap;</b>
+            <b class="code-property">direction:</b> <b>ltr;</b>
+            <b class="code-property">justify-content:</b> <b>flex-start;</b>
+            <b class="code-property">align-items:</b> <b>stretch;</b>
+          </code>
+        </pre>
+      </section>
+
+      <section class="example">
+        <div class="parent height flex-align-items-start">
+          <div class="child child-1">One</div>
+          <div class="child child-2">Two<br>Two</div>
+          <div class="child child-3">Three<br>Three<br>Three</div>
+          <div class="child child-4 mt-20">Four<br>Four<br>Four<br>Four</div>
+          <div class="child child-5">Five<br>Five<br>Five<br>Five<br>Five</div>
+        </div>
+
+        <pre class="codeblock">
+          <code>
+            <b class="code-title">#35</b>
+            <b class="code-property">display:</b> <b>flex;</b>
+            <b class="code-property">flex-direction:</b> <b>row;</b>
+            <b class="code-property">flex-wrap:</b> <b>no-wrap;</b>
+            <b class="code-property">direction:</b> <b>ltr;</b>
+            <b class="code-property">justify-content:</b> <b>flex-start;</b>
+            <b class="code-property">align-items:</b> <b>flex-start;</b>
+            <b class="code-property">margin-top:</b> <b>20px;</b> (child-4 only)
+          </code>
+        </pre>
+      </section>
+
+      <section class="example">
+        <div class="parent height flex-align-items-baseline">
+          <div class="child child-1">One</div>
+          <div class="child child-2">Two<br>Two</div>
+          <div class="child child-3">Three<br>Three<br>Three</div>
+          <div class="child child-4 mt-20">Four<br>Four<br>Four<br>Four</div>
+          <div class="child child-5">Five<br>Five<br>Five<br>Five<br>Five</div>
+        </div>
+
+        <pre class="codeblock">
+          <code>
+            <b class="code-title">#36</b>
+            <b class="code-property">display:</b> <b>flex;</b>
+            <b class="code-property">flex-direction:</b> <b>row;</b>
+            <b class="code-property">flex-wrap:</b> <b>no-wrap;</b>
+            <b class="code-property">direction:</b> <b>ltr;</b>
+            <b class="code-property">justify-content:</b> <b>flex-start;</b>
+            <b class="code-property">align-items:</b> <b>baseline;</b>
+            <b class="code-property">margin-top:</b> <b>20px;</b> (child-4 only)
+          </code>
+        </pre>
+      </section>
+
+      <section class="example">
+        <div class="parent height flex-align-items-end">
+          <div class="child child-1">One</div>
+          <div class="child child-2">Two<br>Two</div>
+          <div class="child child-3">Three<br>Three<br>Three</div>
+          <div class="child child-4">Four<br>Four<br>Four<br>Four</div>
+          <div class="child child-5">Five<br>Five<br>Five<br>Five<br>Five</div>
+        </div>
+
+        <pre class="codeblock">
+          <code>
+            <b class="code-title">#37</b>
+            <b class="code-property">display:</b> <b>flex;</b>
+            <b class="code-property">flex-direction:</b> <b>row;</b>
+            <b class="code-property">flex-wrap:</b> <b>no-wrap;</b>
+            <b class="code-property">direction:</b> <b>ltr;</b>
+            <b class="code-property">justify-content:</b> <b>flex-start;</b>
+            <b class="code-property">align-items:</b> <b>flex-end;</b>
+          </code>
+        </pre>
+      </section>
+
+      <section class="example">
+        <div class="parent height flex-align-items-center">
+          <div class="child child-1">One</div>
+          <div class="child child-2">Two<br>Two</div>
+          <div class="child child-3">Three<br>Three<br>Three</div>
+          <div class="child child-4">Four<br>Four<br>Four<br>Four</div>
+          <div class="child child-5">Five<br>Five<br>Five<br>Five<br>Five</div>
+        </div>
+
+        <pre class="codeblock">
+          <code>
+            <b class="code-title">#38</b>
+            <b class="code-property">display:</b> <b>flex;</b>
+            <b class="code-property">flex-direction:</b> <b>row;</b>
+            <b class="code-property">flex-wrap:</b> <b>no-wrap;</b>
+            <b class="code-property">direction:</b> <b>ltr;</b>
+            <b class="code-property">justify-content:</b> <b>flex-start;</b>
+            <b class="code-property">align-items:</b> <b>center;</b>
+          </code>
+        </pre>
+      </section>
     </main>
   </body>
 </html>
